feat: Add a slider that contains the images and slides them automatically.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AD Container</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+
+      h1 {
+        margin: 10px 0;
+      }
+
+      p {
+        margin: 0 0 20px;
+        text-align: center;
+        max-width: 600px;
+      }
+
+      iframe {
+        max-width: 480px;
+        height: 200px;
+        border: none;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>AD Slider</h1>
+    <p>
+      This is a simple image slider that automatically transitions through a set
+      of images every 3 seconds. It is designed to fit seamlessly within an
+      iframe and adjusts its size dynamically.
+    </p>
+    <iframe src="ad.html"></iframe>
+  </body>
+</html>
