refact: Add a class to the basic iframe.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         margin-bottom: 40px;
       }
 
+      .basic-iframe {
+        width: 480px;
+        height: 200px;
+      }
+
       .tall-iframe {
         width: 300px;
         height: 500px;
@@ -90,7 +95,7 @@
     <section>
       <h2>기본 광고 슬라이더</h2>
       <div class="iframe-container">
-        <iframe src="ad.html" width="480" height="200"></iframe>
+        <iframe src="ad.html" class="basic-iframe"></iframe>
       </div>
     </section>
 
