--- a/ad.html
+++ b/ad.html
@@ -113,14 +113,16 @@
     </div>
 
     <script>
-      let index = 0; // 현재 슬라이드 인덱스
+      let index = 0; // Current slide index
+      let startX = 0; // Starting X coordinate for touch
+      let endX = 0; // Ending X coordinate for touch
 
-      // JSONP가 로드되면 호출되는 콜백 함수
+      // JSONP callback function
       function callback(imageUrlLinkPairs) {
         const slidesContainer = document.getElementById("slides");
         const pageNumber = document.getElementById("pageNumber");
 
-        // 가져온 이미지 정보로 슬라이드 생성
+        // Generate slides from the fetched image data
         imageUrlLinkPairs.forEach((urlLinkPair) => {
           const slide = document.createElement("a");
           slide.target = "_blank";
@@ -132,12 +134,12 @@
           slidesContainer.appendChild(slide);
         });
 
-        // 페이지 번호 업데이트
+        // Update page number
         function updatePageNumber() {
           pageNumber.textContent = `${index + 1} / ${imageUrlLinkPairs.length}`;
         }
 
-        // 주어진 인덱스로 슬라이드 바로 이동
+        // Move to specified slide
         function moveToSlide(newIndex) {
           index =
             (newIndex + imageUrlLinkPairs.length) % imageUrlLinkPairs.length;
@@ -145,12 +147,12 @@
           updatePageNumber();
         }
 
-        // 자동 슬라이드 전환
+        // Automatic sliding
         let interval = setInterval(() => {
           moveToSlide(index + 1);
         }, 3000);
 
-        // 이전, 다음 버튼 이벤트 핸들러 등록
+        // Button click handlers
         document.getElementById("prevButton").addEventListener("click", () => {
           clearInterval(interval); // Stop auto-slide temporarily
           moveToSlide(index - 1);
@@ -163,11 +165,37 @@
           interval = setInterval(() => moveToSlide(index + 1), 3000); // Restart auto-slide
         });
 
-        // 최초 페이지 번호 업데이트
+        // **Touch event handlers for swipe support**
+        const slider = document.querySelector(".slider");
+
+        slider.addEventListener("touchstart", (e) => {
+          clearInterval(interval); // Pause auto-slide
+          startX = e.touches[0].clientX; // Store starting X coordinate
+        });
+
+        slider.addEventListener("touchmove", (e) => {
+          endX = e.touches[0].clientX; // Track ending X coordinate
+        });
+
+        slider.addEventListener("touchend", () => {
+          const diffX = startX - endX; // Calculate swipe distance
+
+          if (diffX > 50) {
+            // Swiped left (next slide)
+            moveToSlide(index + 1);
+          } else if (diffX < -50) {
+            // Swiped right (previous slide)
+            moveToSlide(index - 1);
+          }
+
+          interval = setInterval(() => moveToSlide(index + 1), 3000); // Restart auto-slide
+        });
+
+        // Initial page number update
         updatePageNumber();
       }
 
-      // JSONP 불러오기
+      // Load JSONP
       const script = document.createElement("script");
       script.src = "images.js";
       document.body.appendChild(script);
